Add accounts for user
