# app/serializers/account_serializer.rb
@@ -1,0 +1,6 @@
+class AccountSerializer < Blueprinter::Base
+  identifier :id
+
+  fields :balance
+  association :currency, blueprint: CurrencySerializer
+end
